# septem-circumstantiae

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/septem-circumstantiae/: __init__.py  events.py  human_events.py  natural_events.py
src/septem-circumstantiae/resources/: by_what_means.txt  who.txt
src/septem_circumstantiae/: events.py
src/septem_circumstantiae/resources/: by_what_means.text  how.text  what.text  what.txt  when.text  where.text  who.text  who.txt  why.text
